# maf-order-resolution-agent

./: .gitignore  Makefile  README.md  agents.md  azure.yaml  docker-compose.yml  pyproject.toml
.azure/: deployment-plan.md
.github/: copilot-instructions.md
.github/workflows/: azure-apphosted.yml  ci.yml  foundry-deploy.yml  foundry-orchestrator.yml  foundry-private-validation.yml  foundry-provision.yml  foundry-runner-probe.yml
backend/: .agentignore  .dockerignore  .env.e2e  .env.example  Dockerfile  README.md  agent.yaml  eval.yaml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  rag_repository.py  state.py  workflow_run_repository.py
backend/evals/: cases.jsonl  eval_runner.py  foundry_eval_runner.py  report.json
backend/foundry/: agent.yaml  conversation_shadow.py  eval.yaml  main.py  requirements.txt
backend/observability/: otel.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_eval_runner.py  test_foundry_eval_runner.py  test_foundry_hosted.py  test_maf_clients.py  test_maf_factory.py  test_order_resolution_boundaries.py  test_persistence_reload.py  test_private_topology_regressions.py  test_rag_providers.py  test_responses_client.py  test_session_memory.py  test_telemetry.py  test_workflow.py
backend/tools/: local_tools.py  mcp_tools.py  policy_catalog.py
docs/: manual-testing.md
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
infra/: README.md
scripts/: README.md
(+237 files in other folders)
